# pi05-cube-FT

./: .gitignore  BOOTSTRAP_HPC.md  README.md  christos.txt  create_dummy_droid_hdf5.py  diagnostic_openpi.py  plot_results.py  pyproject.toml  results_base.json  results_base_real.json  results_vlaw.json  state_document.md  test_droid_stream.py
audit/: ARTIFACT_TRACE.md  AUDIT_REPORT_TEMPLATE.md  AUDIT_RUNBOOK.md  DEP_ROOT_CAUSE.md  METRIC_CONTRACT.md
configs/: droid_ctrlworld.yaml  droid_qwen_rm.yaml  droid_single_task_vlaw.yaml
cube_dataset/: PI05_OGBENCH_AGENT_REFERENCE.md  README.md  __init__.py  download_and_replay_ogbench.py  extend_vlm_triptych.py  gt_export.py  run_pi05_base_ur5e_rollouts.py  run_pi05_ogbench_rollouts.py  sample_start_goal_images.py
cube_dataset/finetune_pi05_cube_single_v1/: render_cube_single_dualcam.py  trim_run_videos.py
cube_dataset/finetune_pi05_cube_single_v2/: __init__.py  build_pi05_lora_config.py  check_preflight.py  pipeline_common.py  (+9 more)
lerobot/: __init__.py
reports/: 1_status.md  3_status.md  4_status.md  5_status.md  7_status.md  decision_log.md  stage00_preflight_status.md  stage01_install_lerobot_mw_status.md  stage02_baseline_pushv3_eval_status.md  stage02_gpu_compat_status.md  stage03_install_jepa_wms_status.md  stage06_baseline_eval_status.md  stage07_jepa_setup_status.md  stage08_bridge_design_status.md  stage09_vgg_gates_status.md  stage10_train_loop_status.md  stage11_slurm_orchestration_status.md  stage12_reporting_status.md
runs/: workflow_20260404_124422.json  workflow_20260408_025416.json
scripts/: bootstrap_hpc_env.sh  check_pi05_dataset_compat.py  download_models.py  download_pi05.sh  download_world_reward.sh  eval_pi05_droid.py  eval_pi05_droid_real.py  generate_cube_gt_instructions.py  run_vlaw_qwen3_isolated.sh  setup_env.sh  smoke_env_check.py  smoke_test_vlaw_pipeline.py  test_openpi_policy.py  verify_hpc_bootstrap.sh  verify_vlaw_run.sh
src/: envs_libero_dataset_index.py  envs_libero_smoke_test.py
(+219 files in other folders)
