[project]
name = "vlaw-droid"
version = "0.1.0"
description = "VLAW DROID single-task pipeline"
authors = [{name = "Antigravity", email = "ai@example.com"}]
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.4",
    "torchvision",
    "protobuf>=4.25.3,<5",
    "transformers>=4.53.2,<5",
    "diffusers",
    "accelerate",
    "bitsandbytes",
    "qwen-vl-utils",
    "pyyaml",
    "h5py",
    "matplotlib>=3.10.8",
    "imageio",
    "tensorflow",
    "tensorflow-datasets",
    "tfrecord",
    "opencv-python-headless",
    "openpi",
    "pytest",
    "chex",
]

[tool.uv.sources]
openpi = { path = "external/openpi", editable = true }

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
